# typedjson-python

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
fixtures/: cat_jiji.json
tests/: test_.py  test_annotation.py  test_decoding.py  test_dumping.py  test_loading.py
typedjson/: __init__.py  annotation.py  decoding.py  dumping.py  loading.py
