[tool.poetry]
name = "typedjson"
version = "0.7.4"
description = "JSON decoding for Python with type hinting (PEP 484)"
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "typedjson" },
]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses = "^0.6.0"
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.740"
pytest = "^5.2.1"
ptpython = "^2.0.6"
flake8 = "^3.7.8"
black = "19.03b"

[build-system]
requires = ["poetry==1.0.0b2"]
build-backend = "poetry.masonry.api"
