[tool.poetry]
name = "typedjson"
version = "0.9.0"
description = "JSON decoding for Python with type hinting (PEP 484)"
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
packages = [
    { include = "typedjson" },
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.6.0", python = "< 3.7" }
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
autoflake = "^1.3"
mypy = "^0.701.0"
pyflakes = "^2.1"
pytest = "^4.5"
ptpython = "^2.0"
black = "19.03b"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
