[tool.poetry]
name = "typedjson"
version = "0.10.4"
description = "JSON decoding for Python with type hinting (PEP 484)"
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "typedjson" },
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.6.0", python = "< 3.7" }
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
autoflake = "^1.3"
mypy = "== 0.770"
pytest = "^6.1.0"
ptpython = "^3.0.7"
black = "20.08b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
